--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "angular": "1.2.9",
-    "jquery": "1.11.1",
-    "bootstrap-sass": "^3.3.6"
+    "bootstrap-sass": "^3.3.6",
+    "font-awesome": "^4.6.3",
+    "jquery": "1.11.1"
   },
   "devDependencies": {
+    "angular-filter": "^0.5.8",
     "angular-router-browserify": "0.0.2",
     "browserify": "^11.0.0",
     "browserify-shim": "^3.8.10",
