--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "boilerplate",
-  "version": "1.0.0",
-  "description": "starter template",
-  "main": "app.js",
+  "name": "angular_boilerplate",
+  "version": "2.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "start": "http-server ./public",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Sumen Tse",
-  "license": "MIT",
+  },  
   "browser": {
-    "jquery": "./node_modules/jquery/dist/cdn/jquery.js"
+    "jquery": "./node_modules/jquery/dist/jquery.js"
   },
   "browserify-shim": {
     "jquery": "$"
@@ -21,24 +20,29 @@
   },
   "dependencies": {
     "angular": "1.2.9",
-    "bootstrap-sass": "^3.3.6",
+    "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.6.3",
-    "jquery": "1.11.1"
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "angular-filter": "^0.5.8",
     "angular-router-browserify": "0.0.2",
-    "browserify": "^11.0.0",
-    "browserify-shim": "^3.8.10",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-csso": "^1.0.0",
+    "angular-touch": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "browserify": "^13.1.0",
+    "browserify-shim": "^3.8.12",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-uglify": "^2.0.0",
+    "ng-file-upload": "^12.2.12",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "author": "Sumen Tse",
+  "license": "ISC"
 }
