--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "angular_boilerplate",
-  "version": "2.0.0",
+  "version": "4.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "http-server ./public",
+    "dev": "gulp browserify:watchAll styles:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },  
   "browser": {
@@ -19,16 +20,21 @@
     ]
   },
   "dependencies": {
-    "angular": "1.2.9",
+    "angular": "^1.5.8",
+    "angular-sanitize": "^1.6.3",
     "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.6.3",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
+    "angular-ui-router": "^0.3.1",
+    "angular-touch": "^1.5.8",
+    "angular-filter": "^0.5.8",
+    "ng-file-upload": "^12.2.12",
+    "moment": "^2.17.1",
+    "angular-smart-table": "^2.1.8"    
   },
   "devDependencies": {
-    "angular-filter": "^0.5.8",
     "angular-router-browserify": "0.0.2",
-    "angular-touch": "^1.5.8",
-    "angular-ui-router": "^0.3.1",
     "browserify": "^13.1.0",
     "browserify-shim": "^3.8.12",
     "gulp": "^3.9.1",
@@ -39,7 +45,6 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-uglify": "^2.0.0",
-    "ng-file-upload": "^12.2.12",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
