--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "http-server ./public",
     "dev": "gulp browserify:watchAll styles:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },  
+  },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js"
   },
@@ -16,25 +16,34 @@
   },
   "browserify": {
     "transform": [
+      ["babelify", { 
+        "presets": ["es2015"],
+        "plugins":["transform-regenerator","transform-runtime","transform-async-to-generator"]
+      }],
       "browserify-shim"
     ]
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-filter": "^0.5.8",
     "angular-sanitize": "^1.6.3",
+    "angular-smart-table": "^2.1.8",
+    "angular-touch": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
     "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
-    "angular-ui-router": "^0.3.1",
-    "angular-touch": "^1.5.8",
-    "angular-filter": "^0.5.8",
-    "ng-file-upload": "^12.2.12",
     "moment": "^2.17.1",
-    "angular-smart-table": "^2.1.8"    
+    "ng-file-upload": "^12.2.12"
   },
   "devDependencies": {
     "angular-router-browserify": "0.0.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "browserify-shim": "^3.8.12",
     "gulp": "^3.9.1",
