--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
   "name": "angular_boilerplate",
-  "version": "4.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "http-server ./public",
-    "dev": "gulp browserify:watchAll styles:watch",
+    "dev": "gulp script:watchAll styles:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "browser": {
-    "jquery": "./node_modules/jquery/dist/jquery.js"
-  },
-  "browserify-shim": {
-    "jquery": "$"
   },
   "browserify": {
     "transform": [
-      ["babelify", { 
-        "presets": ["es2015"],
-        "plugins":["transform-regenerator","transform-runtime","transform-async-to-generator"]
-      }],
-      "browserify-shim"
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ],
+          "plugins": [
+            "transform-regenerator",
+            "transform-runtime",
+            "transform-async-to-generator"
+          ]
+        }
+      ]
     ]
   },
   "dependencies": {
-    "angular": "^1.5.8",
+    "angular": "^1.6.6",
+    "angular-animate": "^1.6.6",
     "angular-filter": "^0.5.8",
-    "angular-sanitize": "^1.6.3",
+    "angular-sanitize": "^1.6.6",
     "angular-smart-table": "^2.1.8",
-    "angular-touch": "^1.5.8",
-    "angular-ui-router": "^0.3.1",
+    "angular-touch": "^1.6.6",
+    "angular-ui-bootstrap": "^2.5.6",
+    "angular-ui-router": "^0.4.3",
     "bootstrap-sass": "^3.3.7",
-    "font-awesome": "^4.6.3",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng-file-upload": "^12.2.12"
   },
   "devDependencies": {
-    "angular-router-browserify": "0.0.2",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
@@ -48,6 +50,7 @@
     "browserify-shim": "^3.8.12",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean": "^0.3.2",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
