--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular_boilerplate",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,8 @@
           "plugins": [
             "transform-regenerator",
             "transform-runtime",
-            "transform-async-to-generator"
+            "transform-async-to-generator",
+            "transform-object-rest-spread"
           ]
         }
       ]
@@ -31,6 +32,7 @@
     "angular-filter": "^0.5.8",
     "angular-sanitize": "^1.6.6",
     "angular-smart-table": "^2.1.8",
+    "angular-timeago": "^0.4.6",
     "angular-touch": "^1.6.6",
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "^0.4.3",
@@ -43,6 +45,7 @@
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
