--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
           ],
           "plugins": [
             "transform-regenerator",
-            "transform-runtime",
             "transform-async-to-generator",
             "transform-object-rest-spread"
           ]
@@ -36,6 +35,7 @@
     "angular-touch": "^1.6.10",
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "^0.4.3",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.1.1",
     "lodash": "^4.17.10",
@@ -44,10 +44,9 @@
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "browserify-shim": "^3.8.12",
@@ -60,6 +59,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-uglify": "^2.0.0",
+    "javascript-natural-sort": "^0.7.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
