--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "angular-ui-router": "^0.4.3",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
+    "crypto-js": "^3.1.9-1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
