--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "angular": "^1.6.10",
     "angular-animate": "^1.6.10",
+    "angular-async-await": "^1.1.2",
     "angular-filter": "^0.5.8",
     "angular-sanitize": "^1.6.10",
     "angular-smart-table": "^2.1.8",
