--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "angular-touch": "^1.6.10",
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "^0.4.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "bootstrap-sass": "^3.3.7",
+    "checklist-model": "^1.0.0",
     "crypto-js": "^3.1.9-1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.10",
