--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server ./public",
-    "dev": "gulp script:watchAll styles:watch",
+    "spmode": "./node_modules/gulp/bin/gulp.js spmode",
+    "dev": "./node_modules/gulp/bin/gulp.js script:watchAll styles:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserify": {
@@ -62,18 +63,20 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "browserify-shim": "^3.8.12",
-    "gulp": "^3.9.1",
+    "gulp": "gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cached": "^1.1.1",
     "gulp-clean": "^0.3.2",
     "gulp-ng-annotate": "^2.0.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.1.1",
-    "gulp-uglify": "^2.0.0",
+    "gulp-spsave": "^3.1.1",
+    "gulp-uglify": "^3.0.1",
     "javascript-natural-sort": "^0.7.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "author": "Sumen Tse",
   "license": "ISC"
