--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "angular_boilerplate",
-  "version": "6.0.0",
+  "version": "7.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "http-server ./public",
-    "spmode": "./node_modules/gulp/bin/gulp.js spmode",
+    "spmode": "./node_modules/gulp/bin/gulp.js script:watchAll styles:watch public:watch",
     "dev": "./node_modules/gulp/bin/gulp.js script:watchAll styles:watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -56,9 +56,7 @@
     "ng-file-upload": "^12.2.12"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
