--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "checklist-model": "^1.0.0",
     "crypto-js": "^3.1.9-1",
     "export-to-csv": "^0.1.2",
+    "intro.js": "^2.9.3",
     "jquery": "^3.1.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
