--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular_boilerplate",
-  "version": "7.0.0",
+  "version": "8.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -34,29 +34,30 @@
     ]
   },
   "dependencies": {
-    "angular": "^1.6.10",
-    "angular-animate": "^1.6.10",
+    "@uirouter/angularjs": "^1.0.20",
+    "angular": "^1.7.5",
+    "angular-animate": "^1.7.5",
     "angular-async-await": "^1.1.2",
     "angular-bootstrap-toggle": "^0.1.2",
-    "angular-filter": "^0.5.8",
-    "angular-sanitize": "^1.6.10",
-    "angular-smart-table": "^2.1.8",
+    "angular-filter": "^0.5.17",
+    "angular-sanitize": "^1.7.5",
+    "angular-smart-table": "^2.1.11",
     "angular-timeago": "^0.4.6",
-    "angular-touch": "^1.6.10",
+    "angular-touch": "^1.7.5",
     "angular-ui-bootstrap": "^2.5.6",
-    "angular-ui-router": "^0.4.3",
     "babel-preset-env": "^1.7.0",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass": "^3.4.0",
     "checklist-model": "^1.0.0",
     "crypto-js": "^3.1.9-1",
     "export-to-csv": "^0.1.2",
     "intro.js": "^2.9.3",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
-    "moment": "^2.22.1",
-    "ng-file-upload": "^12.2.12"
+    "moment": "^2.23.0",
+    "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.23.0",
     "babelify": "^7.3.0",
@@ -64,12 +65,14 @@
     "browserify-shim": "^3.8.12",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-spsave": "^3.1.1",
     "gulp-uglify": "^3.0.1",
