--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "angular_boilerplate",
-  "version": "8.0.0",
+  "version": "8.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server ./public",
+    "start": "live-server ./public",
     "spmode": "./node_modules/gulp/bin/gulp.js script:watchAll styles:watch public:watch",
     "dev": "./node_modules/gulp/bin/gulp.js script:watchAll styles:watch",
+    "documentation": "documentation serve ./app/services/spRest.service.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserify": {
@@ -46,7 +47,6 @@
     "angular-touch": "^1.7.5",
     "angular-ui-bootstrap": "^2.5.6",
     "babel-preset-env": "^1.7.0",
-    "bootstrap-sass": "^3.4.0",
     "checklist-model": "^1.0.0",
     "crypto-js": "^3.1.9-1",
     "export-to-csv": "^0.1.2",
@@ -54,7 +54,8 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.23.0",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "ui-bootstrap4": "^3.0.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.2.3",
